# farm_api_gateway

./: auth.py  conf.py  core.py  docker-compose.yml  main.py  pyproject.toml
crop-health-service/: Dockerfile  pyproject.toml  run_dev.py
crop-health-service/src/: main.py
crop-health-service/src/abstractions/: redis.py  singleton.py
crop-health-service/src/constants/: __init__.py
crop-health-service/src/events/: shutdown.py
crop-health-service/src/redis_client/: client.py  manager.py
crop-health-service/src/routers/: __init__.py
crop-health-service/src/routers/dashboard/: views.py
crop-health-service/src/settings/: __init__.py  crop_health_service.py  fastapi_settings.py  gunicorn_settings.py  socketio_app_settings.py
farm-api-gateway/: Dockerfile  main.py  pyproject.toml
farm-api-gateway/envs/: dev.env
farm-api-gateway/scripts/: run_dev.sh  run_local.sh
farm-api-gateway/src/abstractions/: __init__.py  redis.py
farm-api-gateway/src/constants/: logger.py
farm-api-gateway/src/events/: startup.py
farm-api-gateway/src/middlewares/: __init__.py
farm-api-gateway/src/routers/: __init__.py
farm-api-gateway/src/routers/auth_forward/: views.py
farm-api-gateway/src/routers/crop_health_engine/: views.py
farm-api-gateway/src/settings/: base_settings_mixin.py  farm_api_gateway_settings.py  gunicorn_settings.py
farm-api-gateway/src/utils/: auth.py  network.py  post_processing.py  route.py
farm-api-gateway/user_service/: Dockerfile  main.py
scripts/: run_dev.sh
src/constants/: __init__.py  redis.py
src/events/: startup.py
(+8 files in other folders)
