[tool.poetry]
name = "farm-api-gateway"
version = "0.1.0"
description = ""
authors = ["ntdu <ntdu198@gmail.com>"]
readme = "README.md"
packages = [{include = "farm_api_gateway"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
