[tool.poetry]
name = "crop-health-service"
version = "0.1.0"
description = ""
authors = ["Daniel <ntdu198@gmail.com>"]
readme = "README.md"
packages = [{include = "crop-health-service"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.99.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
